--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,21 +1,175 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Register{% endblock %}
-
+  {% block stylesheets %}
+<style>
+        .page-title-bg {
+            background-image: url(../../assets/img/bg3.jpg);
+        }
+        .log-section form .checkbox label {
+            font-size: 16px
+        }
+        .log-section form .checkbox label a {
+            color: #b6a575;
+            text-decoration: underline;
+            text-transform: inherit;
+            font-size: 16px
+        }
+        .log-section form .links a {
+            display: block;
+            text-align: center;
+            color: #b6a575;
+            text-decoration: underline;
+            text-transform: inherit;
+            font-size: 16px
+        }
+    </style>
+{% endblock %}
 {% block body %}
+<header id="header" class="tt-nav transparent-header ">
+    <div class="header-sticky semi-transparent">
+        <div class="container">
+
+            <div id="materialize-menu" class="menuzord">
+
+                <a class="brand logo-brand" href="/"></a>
+                <div id="mobile-menu">
+                    <div class="nav-wrapper" id="toggle">
+                        <span class="top"></span>
+                        <span class="middle"></span>
+                        <span class="bottom"></span>
+                    </div>
+                    <div class="icon-wrapper">
+                        <span class="account">
+							<a href="/templates/auth/profile.html">
+                                <i class="material-icons">&#xE7FD;</i>
+                            </a>
+						</span>
+                    </div>
+                    <div class="nav-overlay" id="overlay">
+                        <nav class="overlay-menu">
+                            <ul>
+                                <li><a href="/">Home</a></li>
+                                <li><a href="/templates/jobs/index.html">Jobs Offers</a></li>
+                                <li><a href="/templates/compagny.html">About Us</a></li>
+                                <li><a href="/templates/contact.html">Contact</a></li>
+                                <li>-</li>
+                                <li><a href="/templates/auth/profile.html">Profile</a></li>
+                                <li><a href="/logout.html">Logout</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="menuzord-menu pull-right light" role="navigation">
+                        <li class=" dropdown">
+                            <a target="_self" href="/templates/auth/login.html">
+                                <span>Login</span>
+                            </a>
+                        </li>
+                        <li class=" dropdown">
+                            <a target="_self" href="/templates/auth/register.html" class="btn bn-lg gradient secondary btn-block waves-effect waves-light btn-register">
+                                <span>Sign Up</span>
+                            </a>
+
+                        </li>
+                    </ul>
+                    <ul class="menuzord-menu pull-right light" role="navigation">
+                        <li class="active dropdown">
+                            <a target="_self" href="/">
+                                <i class=""></i>
+                                <span>Home</span>
+                            </a>
+                        </li>
+                        <li class=" dropdown">
+                            <a target="_self" href="/templates/jobs/index.html">
+                                <i class=""></i>
+                                <span>Jobs offers</span>
+                            </a>
+                        </li>
+                        <li class=" dropdown">
+                            <a target="_self" href="/templates/compagny.html">
+                                <i class=""></i>
+                                <span>About us</span>
+                            </a>
+                        </li>
+                        <li class=" dropdown">
+                            <a target="_self" href="/templates/contact.html">
+                                <i class=""></i>
+                                <span>Contact</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<div class="base">
+
+    <!-- Page -->
+    <div class="page">
+
+        <!-- Page Header-->
+        <section class="page-title page-title-bg fixed-bg overlay dark-5 padding-top-160 padding-bottom-80">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="white-text">Register</h2>
+                        <span class="white-text">Welcome on board</span>
+                        <ol class="breadcrumb">
+                            <li><a href="#!">Home</a></li>
+                            <li class="active">Register</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </section>
+ <section class="section-padding gray-bg log-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-sm-offset-3 card card-panel">
     {% for flashError in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
+    <h3 class="text-extrabold">Create a new account</h3>
 
     {{ form_start(registrationForm) }}
+
+    <div class="input-field">
         {{ form_row(registrationForm.email) }}
+    <span class="help-block">Type your email address.</span>
+    </div>
+    <div class="input-field">
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
+        <i class="fa fa-eye show-password"></i>
+        <span class="help-block">Type your password.</span>
+        </div>
+        <div class="checkbox" >
         {{ form_row(registrationForm.agreeTerms) }}
+        </div>
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-lg gradient secondary btn-block waves-effect waves-light mt-20 mb-20">Create an account</button>
     {{ form_end(registrationForm) }}
+        <div class="links">
+        <a href="/login.html">Already have an account? Click here</a>
+        </div>
+        </div>
+
+        </div>
+        </div>
+    </section>
+
+
+{% endblock %}
+
+{% block javascripts %}
+<script type="text/javascript">
+    onAppReady(function() {
+        $('.preload').remove();
+    });
+</script>
 {% endblock %}
