--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -34,19 +34,34 @@
      <section class="gray-bg">
             <div class="container">
                 <div class="row">
+                    {% if pourcentage == 100 %}
                     <div class="score-container">
                         <h4>
                             <img src="https://i.imgur.com/s9bPVaK.gif" style="height: 80px; width: 201px;"> &nbsp;
                             &nbsp; Hooray ! Your profile is complete.
                         </h4>
                           <div class="c100 p100 small complete ">
-                            <span>100%</span>
+                            <span>{{ pourcentage }}%</span>
                             <div class="slice">
                                 <div class="bar"></div>
                                 <div class="fill"></div>
                             </div>
                         </div>
                     </div>
+                    {% else %}
+                     <div class="score-container">
+                        <h4>
+                            &nbsp; Complete your profile.
+                        </h4>
+                          <div class="c100 p100 small complete ">
+                            <span>{{ pourcentage }}%</span>
+                            <div class="slice">
+                                <div class="bar"></div>
+                                <div class="fill"></div>
+                            </div>
+                        </div>
+                    </div>
+                    {% endif %}
                     <div class="clearfix"></div>
                 </div>
             </div>
