--- a/templates/candidature/index.html.twig
+++ b/templates/candidature/index.html.twig
@@ -1,20 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CandidatureController!{% endblock %}
+{% block title %}Candidature index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Candidature index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>CreatedAt</th>
+                <th>UpdatedAt</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for candidature in candidatures %}
+            <tr>
+                <td>{{ candidature.id }}</td>
+                <td>{{ candidature.createdAt ? candidature.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ candidature.updatedAt ? candidature.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>
+                    <a href="{{ path('candidature_show', {'id': candidature.id}) }}">show</a>
+                    <a href="{{ path('candidature_edit', {'id': candidature.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="4">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/azerty/devilbox/data/www/luxury_thegoodone/src/Controller/CandidatureController.php'|file_link(0) }}">src/Controller/CandidatureController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/azerty/devilbox/data/www/luxury_thegoodone/templates/candidature/index.html.twig'|file_link(0) }}">templates/candidature/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('candidature_new') }}">Create new</a>
 {% endblock %}
