--- a/templates/job_offer/index.html.twig
+++ b/templates/job_offer/index.html.twig
@@ -29,15 +29,17 @@
                 <div class="portfolio-container">
 
                     <ul class="portfolio-filter brand-filter text-center">
-                        <li class="active waves-effect waves-light" data-group="all">All</li>
-                        <li class=" waves-effect waves-light" data-group="commercial">Commercial</li>
-                        <li class=" waves-effect waves-light" data-group="retail">Retail sales</li>
-                        <li class=" waves-effect waves-light" data-group="creative">Creative</li>
-                        <li class=" waves-effect waves-light" data-group="technology">Technology</li>
-                        <li class=" waves-effect waves-light" data-group="marketing">Marketing & PR</li>
-                        <li class=" waves-effect waves-light" data-group="fashion">Fashion & luxury</li>
-                        <li class=" waves-effect waves-light" data-group="management">Management & HR</li>
-                    </ul>
+            <li class="active waves-effect waves-light" data-group="all">All</li>
+            <li class=" waves-effect waves-light" data-group="Commercial">Commercial</li>
+            <li class=" waves-effect waves-light" data-group="Retail sales">Retail sales</li>
+            <li class=" waves-effect waves-light" data-group="Creative">Creative</li>
+            <li class=" waves-effect waves-light" data-group="Technology">Technology</li>
+            <li class=" waves-effect waves-light" data-group="Marketing & PR">Marketing & PR</li>
+            <li class=" waves-effect waves-light" data-group="Fashion & luxury">Fashion & luxury</li>
+            <li class=" waves-effect waves-light" data-group="Management & HR">Management & HR</li>
+          </ul>
+
+
 <div class="portfolio portfolio-with-title col-2 gutter mt-30">
                 {% for job_offer in job_offers %}
                         <div class="portfolio-item" data-groups='["all", "{{ job_offer.jobCategory }}"]'>
@@ -63,7 +65,7 @@
                                     </div>
                                     <div class="card-action">
                                         <a class="btn btn-md primary border waves-effect waves-dark" href="{{ path('job_offer_show', {'id': job_offer.id}) }}">Details</a>
-                                        <a class="btn btn-md primary waves-effect waves-light" href="#!">Apply</a>
+                                        <a class="btn btn-md primary waves-effect waves-light" href="{{ path('candidature_new', {'id': job_offer.id}) }}">Apply</a>
                                         <a href="{{ path('job_offer_show', {'id': job_offer.id}) }}">show</a>
                                         <a href="{{ path('job_offer_edit', {'id': job_offer.id}) }}">edit</a>
                                         <a href="{{ path('job_offer_new') }}">Create new</a>
