--- a/templates/job_offer/show.html.twig
+++ b/templates/job_offer/show.html.twig
@@ -44,9 +44,12 @@
                                 <li><span> Location </span>{{ job_offer.location }}</li>
                                 <li><span> Starting date </span>{{ job_offer.closedAt ? job_offer.closedAt|date('Y-m-d H:i:s') : '' }}</li>
                             </ul>
-                            <a class="btn btn-block gradient primary mt-30 waves-effect waves-light" href="#!">Apply for this job</a>
+                            {% if candidature %}
                             <div class="btn btn-block btn-success mt-30 waves-effect waves-light disabled">You have applied for this job</div>
-                        </div>
+                            {% else %}
+                            <a class="btn btn-block gradient primary mt-30 waves-effect waves-light" href="{{path('candidature_new', {'id': job_offer.id})}}">Apply for this job</a>
+                            {% endif %}
+                             </div>
                     </div>
                 </div>
 
